Bg Signup+fotobox

--- a/pages/forum.html
+++ b/pages/forum.html
@@ -74,7 +74,7 @@
           <div class="col-md-12 first-content">
             <div class="col-md-8 no-padding">
               <ul class="nav nav-tabs no-padding block">
-                <li role="presentation" class="active"><a href="#" class="">All</a></li>
+                <li role="presentation" class="active"><a href="#" >All</a></li>
                 <li role="presentation" ><a href="#" class="garisbawah text-primary">Edukasi</a></li>
                 <li role="presentation" ><a href="#" class="garisbawah text-primary">Bisnis</a></li>
                 <li role="presentation" ><a href="#" class="garisbawah text-primary">Hiburan</a></li>
@@ -85,11 +85,11 @@
                   <div class="col-md-4 no-padding">
                     <div class="info">
                       <span class="badge">4</span>
-                      <p class="">Menjawab</p>
+                      <p >Menjawab</p>
                     </div>
                     <div class="info">
                       <span class="badge">5</span>
-                      <p class="">Melihat</p>
+                      <p >Melihat</p>
                     </div>
                   </div>
                   <div class="col-md-8 garisbawah">
@@ -101,11 +101,11 @@
                   <div class="col-md-4 no-padding">
                     <div class="info">
                       <span class="badge">4</span>
-                      <p class="">Menjawab</p>
+                      <p >Menjawab</p>
                     </div>
                     <div class="info">
                       <span class="badge">5</span>
-                      <p class="">Melihat</p>
+                      <p >Melihat</p>
                     </div>
                   </div>
                   <div class="col-md-8 garisbawah">
@@ -117,11 +117,11 @@
                   <div class="col-md-4 no-padding">
                     <div class="info">
                       <span class="badge">4</span>
-                      <p class="">Menjawab</p>
+                      <p >Menjawab</p>
                     </div>
                     <div class="info">
                       <span class="badge">5</span>
-                      <p class="">Melihat</p>
+                      <p >Melihat</p>
                     </div>
                   </div>
                   <div class="col-md-8 garisbawah">
@@ -133,11 +133,11 @@
                   <div class="col-md-4 no-padding">
                     <div class="info">
                       <span class="badge">4</span>
-                      <p class="">Menjawab</p>
+                      <p >Menjawab</p>
                     </div>
                     <div class="info">
                       <span class="badge">5</span>
-                      <p class="">Melihat</p>
+                      <p >Melihat</p>
                     </div>
                   </div>
                   <div class="col-md-8 garisbawah">
@@ -149,11 +149,11 @@
                   <div class="col-md-4 no-padding">
                     <div class="info">
                       <span class="badge">4</span>
-                      <p class="">Menjawab</p>
+                      <p >Menjawab</p>
                     </div>
                     <div class="info">
                       <span class="badge">5</span>
-                      <p class="">Melihat</p>
+                      <p >Melihat</p>
                     </div>
                   </div>
                   <div class="col-md-8 garisbawah">
