--- a/pages/onePageForum.html
+++ b/pages/onePageForum.html
@@ -54,111 +54,40 @@
     <!--end of nav -->
 
         <!-- category -->
-    <section class="page-forum">
+    <section class="page-forum page-sub-forum">
       <div class="container">
         <div class="row">
           <div class="col-md-12 add-space garisbawah">
             <h2 class="text-primary ">Gedebuk Forum</h2>
             <small class="secondary-color">Diskusi, tanya buku Lorem ipsum dolor sit amet.</small>
           </div>
-          <div class="col-md-12 text-center alert alert-info">
-            <div class="col-md-3 head"><i class="fa fa-comments icon"></i></div>
-            <div class="col-md-9">
-              <h3>Join with us!</h3>
-              <div class="garisbawah light"></div>
-              <p>Belum bergabung dengan gedebuk?</p>
-              <p>Segera <a href="signup.html" class="text-warning underline">Daftar</a> dan nikmati semua kemudahan yang ada!</p>
-              <a class="first-content block add-space" href="signup.html"><button class="btn btn-lg btn-primary" type="button" name="link">Daftar sekarang!</button></a>
-            </div>
-          </div>
           <div class="col-md-12 first-content">
             <div class="col-md-8 no-padding">
-              <ul class="nav nav-tabs no-padding block">
-                <li role="presentation" class="active"><a href="#" class="">All</a></li>
-                <li role="presentation" ><a href="#" class="garisbawah text-primary">Edukasi</a></li>
-                <li role="presentation" ><a href="#" class="garisbawah text-primary">Bisnis</a></li>
-                <li role="presentation" ><a href="#" class="garisbawah text-primary">Hiburan</a></li>
-                <li role="presentation" ><a href="#" class="garisbawah text-primary">Bacaan sehari-hari</a></li>
-              </ul>
+              <div class="col-md-2 text-center">
+                <div class="img-wrapper">
+                  <img src="../assets/bg.jpeg" class="img-responsive" alt="Profil Photo">
+                </div>
+                <p>Nama akun</p>
+                <small>Diposting pada : <span class="text-primary">16 Januari 2016</span></small>
+              </div>
+              <div class="col-md-10 ts">
+                <h4>Pertanyaannya</h4>
+                <small>Kategori: <a href="#">Ikeh</a></small>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, molestias, inventore. Voluptate, consequatur, eveniet commodi vero maiores aperiam enim eius repudiandae ipsa, voluptatum laboriosam repellat libero beatae optio saepe amet.</p>
+              </div>
+              <div class="block garisbawah first-content"><p>Jawaban</p></div>
               <ul>
                 <li>
-                  <div class="col-md-4 no-padding">
-                    <div class="info">
-                      <span class="badge">4</span>
-                      <p class="">Menjawab</p>
+                  <div class="col-md-2 text-center">
+                    <div class="img-wrapper">
+                      <img src="../assets/bg.jpeg" class="img-responsive" alt="Profil Photo">
                     </div>
-                    <div class="info">
-                      <span class="badge">5</span>
-                      <p class="">Melihat</p>
-                    </div>
+                    <p>Nama akun</p>
                   </div>
-                  <div class="col-md-8 garisbawah">
-                    <a href="#"><h4 class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</h4></a>
-                    <small>Kategori : <span class="kategori">Edukasi, Pendidikan</span></small>
-                  </div>
-                </li>
-                <li>
-                  <div class="col-md-4 no-padding">
-                    <div class="info">
-                      <span class="badge">4</span>
-                      <p class="">Menjawab</p>
+                  <div class="col-md-10 no-padding">
+                    <div class="buble">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, molestias, inventore. Voluptate, consequatur, eveniet commodi vero maiores aperiam enim eius repudiandae ipsa, voluptatum laboriosam repellat libero beatae optio saepe amet.</p>
                     </div>
-                    <div class="info">
-                      <span class="badge">5</span>
-                      <p class="">Melihat</p>
-                    </div>
-                  </div>
-                  <div class="col-md-8 garisbawah">
-                    <a href="#"><h4 class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</h4></a>
-                    <small>Kategori : <span class="kategori">Edukasi, Pendidikan</span></small>
-                  </div>
-                </li>
-                <li>
-                  <div class="col-md-4 no-padding">
-                    <div class="info">
-                      <span class="badge">4</span>
-                      <p class="">Menjawab</p>
-                    </div>
-                    <div class="info">
-                      <span class="badge">5</span>
-                      <p class="">Melihat</p>
-                    </div>
-                  </div>
-                  <div class="col-md-8 garisbawah">
-                    <a href="#"><h4 class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</h4></a>
-                    <small>Kategori : <span class="kategori">Edukasi, Pendidikan</span></small>
-                  </div>
-                </li>
-                <li>
-                  <div class="col-md-4 no-padding">
-                    <div class="info">
-                      <span class="badge">4</span>
-                      <p class="">Menjawab</p>
-                    </div>
-                    <div class="info">
-                      <span class="badge">5</span>
-                      <p class="">Melihat</p>
-                    </div>
-                  </div>
-                  <div class="col-md-8 garisbawah">
-                    <a href="#"><h4 class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</h4></a>
-                    <small>Kategori : <span class="kategori">Edukasi, Pendidikan</span></small>
-                  </div>
-                </li>
-                <li>
-                  <div class="col-md-4 no-padding">
-                    <div class="info">
-                      <span class="badge">4</span>
-                      <p class="">Menjawab</p>
-                    </div>
-                    <div class="info">
-                      <span class="badge">5</span>
-                      <p class="">Melihat</p>
-                    </div>
-                  </div>
-                  <div class="col-md-8 garisbawah">
-                    <a href="#"><h4 class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</h4></a>
-                    <small>Kategori : <span class="kategori">Edukasi, Pendidikan</span></small>
                   </div>
                 </li>
               </ul>
@@ -169,6 +98,40 @@
                 <a href="#"><button type="button" class="btn btn-md btn-warning" name="button">Tanya aja</button></a>
               </div>
               <div class="panel panel-info">
+                <div class="panel-heading">
+                  <h4>Related question</h4>
+                </div>
+                <div class="panel-body">
+                  <ul>
+                    <li>
+                      <div class="col-md-12">
+                        <a href="#"><p class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</p></a>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="col-md-12">
+                        <a href="#"><p class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</p></a>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="col-md-12">
+                        <a href="#"><p class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</p></a>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="col-md-12">
+                        <a href="#"><p class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</p></a>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="col-md-12">
+                        <a href="#"><p class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</p></a>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="panel panel-warning">
                 <div class="panel-heading">
                   <h4>Pertanyaan favorit</h4>
                 </div>
