--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button type="submit" class="btn btn-default">Cari</button>
           </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="pages/login.html">Log In</a></li>
+            <li><a href="pages/login.html"><button type="button" class="btn btn-primary btn-login" name="button">Login</button></a></li>
             <li><a  href="pages/signup.html"><span class="text-warning">Daftar</span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
