fix nav, footer index

--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
         <div class="collapse navbar-collapse" id="menu">
           <form class="navbar-form navbar-left search">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Cari judul buku/nama pengarang">
+              <input type="text" id="input" class="form-control" placeholder="Cari judul buku/nama pengarang">
             </div>
             <button type="submit" class="btn btn-default">Cari</button>
           </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="pages/login.html"><button type="button" class="btn btn-primary btn-login" name="button">Login</button></a></li>
+            <li><a  href="pages/forum.html">Forum</a></li>
+            <li><a id="pad" href="pages/login.html"><button type="button" class="btn btn-primary btn-login" name="button">Login</button></a></li>
             <li><a  href="pages/signup.html"><span class="text-warning">Daftar</span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -455,25 +456,55 @@
                 <div class="block help text-center">Tips measas</div>
               </a>
             </div>
-            <div class="col-md-6 col-sm-4 about">
-              <div class="col-md-12">
-                <a class="block" href="#"><h4>Copyright Gedebuk &copy; 2017</h4></a>
-                <div class="col-md-4 no-padding">
-                  <a href="">About Us</a>
-                </div>
-                <div class="col-md-8 no-padding">
-                  <a href="">FAQ</a>
-                </div>
-                <div class="col-md-4 no-padding">
-                  <a href="">About Us</a>
-                </div>
-                <div class="col-md-8 no-padding">
-                  <a href="">FAQ</a>
-                </div>
-              </div>
-          </div>
-          <div class="col-md-3 col-sm-4" id="logo">
-            <abbr title="developed by GUAdev"><img src="GUAdev.jpg" class="pull-right guadev img-circle" alt="GUAdev"></abbr>
+            <div class="col-md-3 text-center">
+              <p>Dukungan</p>
+              <a href="#">F.A.Q</a>
+              <a href="#">Lorem.</a>
+              <a href="#">Personal</a>
+            </div>
+            <div class="col-md-3 text-center">
+              <p>Bisnis</p>
+              <a href="#">Career</a>
+              <a href="#">Bsiness</a>
+              <a href="#">Yeah</a>
+            </div>
+            <div class="col-md-3 text-center">
+              <p>Gedebuk</p>
+              <a href="#">About Gedebuk</a>
+              <a href="#">Riza</a>
+              <a href="#">Obi</a>
+            </div>
+        </div>
+      </section>
+      <section class="powered clearfix">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 pull-left">
+              <small class="block">Supported by:</small>
+              <abbr title="Stasion">
+                <a href="#">
+                  <img src="assets/stasion.png" alt="">
+                </a>
+              </abbr>
+              <abbr title="CDC ICT">
+                <a href="#">
+                  <img src="assets/ict.jpg" alt="">
+                </a>
+              </abbr>
+              <abbr title="Inagata technosmith">
+                <a href="#">
+                  <img src="assets/inagata.png" alt="">
+                </a>
+              </abbr>
+            </div>
+            <div class="col-md-6 dev text-right">
+              <p class="inline"><span class="primary-colorwhite">Copyright 2017</span> | developed by &nbsp; </p>
+              <abbr title="Guadev">
+                <a href="#">
+                  <img src="assets/GUAdev.jpg" alt="">
+                </a>
+              </abbr>
+            </div>
           </div>
         </div>
       </section>
