post question forum

--- a/index.html
+++ b/index.html
@@ -456,23 +456,29 @@
                 <div class="block help text-center">Tips measas</div>
               </a>
             </div>
-            <div class="col-md-3 text-center">
+            <div class="col-md-2 col-md-offset-3 text-center">
               <p>Dukungan</p>
-              <a href="#">F.A.Q</a>
-              <a href="#">Lorem.</a>
-              <a href="#">Personal</a>
+              <ul>
+                <li><a href="#">F.A.Q</a></li>
+                <li><a href="#">F.A.Q</a></li>
+                <li><a href="#">F.A.Q</a></li>
+              </ul>
             </div>
-            <div class="col-md-3 text-center">
+            <div class="col-md-2 text-center">
               <p>Bisnis</p>
-              <a href="#">Career</a>
-              <a href="#">Bsiness</a>
-              <a href="#">Yeah</a>
+              <ul>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">Career</a></li>
+              </ul>
             </div>
-            <div class="col-md-3 text-center">
+            <div class="col-md-2 text-center">
               <p>Gedebuk</p>
-              <a href="#">About Gedebuk</a>
-              <a href="#">Riza</a>
-              <a href="#">Obi</a>
+              <ul>
+                <li><a href="#">About Gedebuk</a></li>
+                <li><a href="#">About Gedebuk</a></li>
+                <li><a href="#">About Gedebuk</a></li>
+              </ul>
             </div>
         </div>
       </section>
