--- a/pages/forum.html
+++ b/pages/forum.html
@@ -55,6 +55,32 @@
 
         <!-- category -->
     <section class="page-forum">
+      <div id="asking" class="asking">
+        <div class="container">
+          <div class="row">
+            <a href="#close"><div id="close">X</div></a>
+            <div class="col-md-12 add-space">
+              <h2 class="text-primary">Tanya ke forum</h2>
+            </div>
+            <div class="col-md-8">
+              <input type="text" class="form-control" placeholder="Judul">
+            </div>
+            <div class="col-md-4">
+              <select class="form-control" name="">
+                <option value="null">Kategori</option>
+                <option value="Pendidikan">Pendidikan</option>
+                <option value="Bisnis">Bisnis</option>
+                <option value="Hiburan">Hiburan</option>
+                <option value="Lain-lain">Lain-lain</option>
+              </select>
+            </div>
+            <div class="col-md-12 first-content text-right">
+              <textarea name="name" class="form-control">Dekskripsi dan tambahan keterangan</textarea>
+              <button class="btn btn-primary btn-lg text-right">Tanya</button>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-md-12 add-space garisbawah">
@@ -82,81 +108,101 @@
               </ul>
               <ul>
                 <li>
-                  <div class="col-md-4 no-padding">
+                  <div class="col-md-3 no-padding">
                     <div class="info">
-                      <span class="badge">4</span>
-                      <p >Menjawab</p>
+                      <div class="centering">
+                        <span class="badge">4</span>
+                        <p >Menjawab</p>
+                      </div>
                     </div>
                     <div class="info">
-                      <span class="badge">5</span>
-                      <p >Melihat</p>
+                      <div class="centering">
+                        <span class="badge">5</span>
+                        <p >Melihat</p>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-md-8 garisbawah">
+                  <div class="col-md-9 garisbawah">
                     <a href="#"><h4 class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</h4></a>
                     <small>Kategori : <span class="kategori">Edukasi, Pendidikan</span></small>
                   </div>
                 </li>
                 <li>
-                  <div class="col-md-4 no-padding">
+                  <div class="col-md-3 no-padding">
                     <div class="info">
-                      <span class="badge">4</span>
-                      <p >Menjawab</p>
+                      <div class="centering">
+                        <span class="badge">4</span>
+                        <p >Menjawab</p>
+                      </div>
                     </div>
                     <div class="info">
-                      <span class="badge">5</span>
-                      <p >Melihat</p>
+                      <div class="centering">
+                        <span class="badge">5</span>
+                        <p >Melihat</p>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-md-8 garisbawah">
+                  <div class="col-md-9 garisbawah">
                     <a href="#"><h4 class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</h4></a>
                     <small>Kategori : <span class="kategori">Edukasi, Pendidikan</span></small>
                   </div>
                 </li>
                 <li>
-                  <div class="col-md-4 no-padding">
+                  <div class="col-md-3 no-padding">
                     <div class="info">
-                      <span class="badge">4</span>
-                      <p >Menjawab</p>
+                      <div class="centering">
+                        <span class="badge">4</span>
+                        <p >Menjawab</p>
+                      </div>
                     </div>
                     <div class="info">
-                      <span class="badge">5</span>
-                      <p >Melihat</p>
+                      <div class="centering">
+                        <span class="badge">5</span>
+                        <p >Melihat</p>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-md-8 garisbawah">
+                  <div class="col-md-9 garisbawah">
                     <a href="#"><h4 class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</h4></a>
                     <small>Kategori : <span class="kategori">Edukasi, Pendidikan</span></small>
                   </div>
                 </li>
                 <li>
-                  <div class="col-md-4 no-padding">
+                  <div class="col-md-3 no-padding">
                     <div class="info">
-                      <span class="badge">4</span>
-                      <p >Menjawab</p>
+                      <div class="centering">
+                        <span class="badge">4</span>
+                        <p >Menjawab</p>
+                      </div>
                     </div>
                     <div class="info">
-                      <span class="badge">5</span>
-                      <p >Melihat</p>
+                      <div class="centering">
+                        <span class="badge">5</span>
+                        <p >Melihat</p>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-md-8 garisbawah">
+                  <div class="col-md-9 garisbawah">
                     <a href="#"><h4 class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</h4></a>
                     <small>Kategori : <span class="kategori">Edukasi, Pendidikan</span></small>
                   </div>
                 </li>
                 <li>
-                  <div class="col-md-4 no-padding">
+                  <div class="col-md-3 no-padding">
                     <div class="info">
-                      <span class="badge">4</span>
-                      <p >Menjawab</p>
+                      <div class="centering">
+                        <span class="badge">4</span>
+                        <p >Menjawab</p>
+                      </div>
                     </div>
                     <div class="info">
-                      <span class="badge">5</span>
-                      <p >Melihat</p>
+                      <div class="centering">
+                        <span class="badge">5</span>
+                        <p >Melihat</p>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-md-8 garisbawah">
+                  <div class="col-md-9 garisbawah">
                     <a href="#"><h4 class="underline">Pertanyaan kenapa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, corporis.</h4></a>
                     <small>Kategori : <span class="kategori">Edukasi, Pendidikan</span></small>
                   </div>
@@ -166,7 +212,7 @@
             <div class="col-md-4 floating-right">
               <div class="alert alert-warning">
                 <h4>Ingin bertanya?</h4>
-                <a href="#"><button type="button" class="btn btn-md btn-warning" name="button">Tanya aja</button></a>
+                <a href="#asking"><button type="button" class="btn btn-md btn-warning" name="button">Tanya aja</button></a>
               </div>
               <div class="panel panel-info">
                 <div class="panel-heading">
