--- a/pages/login.html
+++ b/pages/login.html
@@ -60,7 +60,9 @@
                   <input type="text" placeholder="Username/email" >
                   <input type="password" placeholder="Password" >
                 </div>
-                <div class="clearfix"> </div><br />
+                <div class="alert alert-warning">
+                  <p>Belum punya akun? <a href="../pages/signup.html" class="text-danger underline">Daftar disini.</a></p>
+                </div>
                 <button class="btn btn-lg btn-primary wow animated fadeInUp center-block" type="submit">Log In</button>
                 <a href="#" class="pull-right first-content"><small class="text-danger underline">Lupa password?</small></a>
               </form>
